Cambios para conseguir la bbdd

--- a/frontend/admin/dashboard.html
+++ b/frontend/admin/dashboard.html
@@ -82,6 +82,8 @@
         </main>
     </div>
 
+    <!-- Scripts en orden correcto -->
+    <script src="../js/auth.js"></script>
     <script src="../js/api.js"></script>
     <script src="../js/admin.js"></script>
 </body>
