--- a/frontend/admin/products.html
+++ b/frontend/admin/products.html
@@ -115,8 +115,9 @@
         </div>
     </div>
 
-    <script src="../js/api.js"></script>
+    <!-- Scripts en orden correcto -->
     <script src="../js/auth.js"></script>
+    <script src="../js/api.js"></script>
     <script src="../js/admin.js"></script>
 </body>
 </html>
