--- a/frontend/admin/reports.html
+++ b/frontend/admin/reports.html
@@ -94,8 +94,9 @@
         </main>
     </div>
 
-    <script src="../js/api.js"></script>
+    <!-- Scripts en orden correcto -->
     <script src="../js/auth.js"></script>
+    <script src="../js/api.js"></script>
     <script src="../js/admin.js"></script>
 </body>
 </html>
