--- a/frontend/employee/dashboard.html
+++ b/frontend/employee/dashboard.html
@@ -25,7 +25,7 @@
         <main class="main-content">
             <header class="content-header">
                 <h1>Bienvenido</h1>
-                <button id="location-btn" class="btn-location" onclick="getCurrentLocation()">
+                <button id="location-btn" class="btn-location" onclick="getCurrentLocationForEmployee()">
                     📍 Obtener Ubicación
                 </button>
             </header>
@@ -69,6 +69,8 @@
         </main>
     </div>
 
+    <!-- Scripts en orden correcto -->
+    <script src="../js/auth.js"></script>
     <script src="../js/api.js"></script>
     <script src="../js/employee.js"></script>
 </body>
