--- a/frontend/employee/orders.html
+++ b/frontend/employee/orders.html
@@ -127,8 +127,9 @@
         </main>
     </div>
 
-    <script src="../js/api.js"></script>
+    <!-- Scripts en orden correcto -->
     <script src="../js/auth.js"></script>
+    <script src="../js/api.js"></script>
     <script src="../js/employee.js"></script>
 </body>
 </html>
