--- a/frontend/employee/sales.html
+++ b/frontend/employee/sales.html
@@ -125,8 +125,9 @@
         </div>
     </div>
 
-    <script src="../js/api.js"></script>
+    <!-- Scripts en orden correcto -->
     <script src="../js/auth.js"></script>
+    <script src="../js/api.js"></script>
     <script src="../js/employee.js"></script>
 </body>
 </html>
