--- a/frontend/admin/dashboard.html
+++ b/frontend/admin/dashboard.html
@@ -82,7 +82,8 @@
         </main>
     </div>
 
-    <!-- Scripts en orden correcto -->
+    <!-- Scripts en orden correcto: config PRIMERO -->
+    <script src="../js/config.js"></script>
     <script src="../js/auth.js"></script>
     <script src="../js/api.js"></script>
     <script src="../js/admin.js"></script>
