--- a/frontend/admin/products.html
+++ b/frontend/admin/products.html
@@ -116,6 +116,7 @@
     </div>
 
     <!-- Scripts en orden correcto -->
+    <script src="../js/config.js"></script>
     <script src="../js/auth.js"></script>
     <script src="../js/api.js"></script>
     <script src="../js/admin.js"></script>
