--- a/frontend/admin/reports.html
+++ b/frontend/admin/reports.html
@@ -95,6 +95,7 @@
     </div>
 
     <!-- Scripts en orden correcto -->
+    <script src="../js/config.js"></script>
     <script src="../js/auth.js"></script>
     <script src="../js/api.js"></script>
     <script src="../js/admin.js"></script>
