--- a/frontend/employee/dashboard.html
+++ b/frontend/employee/dashboard.html
@@ -70,8 +70,9 @@
     </div>
 
     <!-- Scripts en orden correcto -->
+    <script src="../js/config.js"></script>
     <script src="../js/auth.js"></script>
     <script src="../js/api.js"></script>
-    <script src="../js/employee.js"></script>
+    <script src="../js/admin.js"></script>
 </body>
 </html>
