--- a/frontend/admin/orders.html
+++ b/frontend/admin/orders.html
@@ -34,6 +34,9 @@
                         <option value="confirmed">Confirmados</option>
                         <option value="cancelled">Cancelados</option>
                     </select>
+                    <button class="btn btn-primary" onclick="loadOrdersPage()" title="Actualizar lista">
+                        🔄 Actualizar
+                    </button>
                 </div>
             </header>
 
