--- a/frontend/admin/dashboard.html
+++ b/frontend/admin/dashboard.html
@@ -87,5 +87,6 @@
     <script src="../js/auth.js"></script>
     <script src="../js/api.js"></script>
     <script src="../js/admin.js"></script>
+    <script src="../js/order-details-modal.js"></script>
 </body>
 </html>
