--- a/frontend/admin/employees.html
+++ b/frontend/admin/employees.html
@@ -105,5 +105,6 @@
     <script src="../js/auth.js"></script>
     <script src="../js/api.js"></script>
     <script src="../js/admin.js"></script>
+    <script src="../js/order-details-modal.js"></script>
 </body>
 </html>
