--- a/frontend/admin/products.html
+++ b/frontend/admin/products.html
@@ -17,11 +17,13 @@
             <ul class="nav-menu">
                 <li><a href="dashboard.html">Dashboard</a></li>
                 <li><a href="products.html" class="active">Productos</a></li>
-                <li><a href="employees.html">Empleados</a></li>
+                <li><a href="employees.html">Vendedores</a></li>
                 <li><a href="orders.html">Pedidos</a></li>
+                <li><a href="subalmacenes.html">Subalmacenes</a></li>
                 <li><a href="reports.html">Reportes</a></li>
                 <li><a href="#" onclick="logout()">Cerrar Sesión</a></li>
             </ul>
+
         </nav>
 
         <main class="main-content">
