--- a/frontend/admin/orders.html
+++ b/frontend/admin/orders.html
@@ -17,13 +17,13 @@
             <ul class="nav-menu">
                 <li><a href="dashboard.html">Dashboard</a></li>
                 <li><a href="products.html">Productos</a></li>
-                <li><a href="employees.html">Empleados</a></li>
+                <li><a href="employees.html">Vendedores</a></li>
                 <li><a href="orders.html" class="active">Pedidos</a></li>
+                <li><a href="subalmacenes.html">Subalmacenes</a></li>
                 <li><a href="reports.html">Reportes</a></li>
                 <li><a href="#" onclick="logout()">Cerrar Sesión</a></li>
             </ul>
         </nav>
-
         <main class="main-content">
             <header class="content-header">
                 <h1>Gestión de Pedidos</h1>
