--- a/frontend/admin/reports.html
+++ b/frontend/admin/reports.html
@@ -14,14 +14,15 @@
                 <h2>Admin Panel</h2>
                 <span id="user-name"></span>
             </div>
-            <ul class="nav-menu">
-                <li><a href="dashboard.html">Dashboard</a></li>
-                <li><a href="products.html">Productos</a></li>
-                <li><a href="employees.html">Empleados</a></li>
-                <li><a href="orders.html">Pedidos</a></li>
-                <li><a href="reports.html" class="active">Reportes</a></li>
-                <li><a href="#" onclick="logout()">Cerrar Sesión</a></li>
-            </ul>
+        <ul class="nav-menu">
+            <li><a href="dashboard.html">Dashboard</a></li>
+            <li><a href="products.html">Productos</a></li>
+            <li><a href="employees.html">Empleados</a></li>
+            <li><a href="orders.html">Pedidos</a></li>
+            <li><a href="subalmacenes.html" class="active">Subalmacenes</a></li>
+            <li><a href="reports.html">Reportes</a></li>
+            <li><a href="#" onclick="logout()">Cerrar Sesión</a></li>
+        </ul>
         </nav>
 
         <main class="main-content">
