Adapt products to the real products

--- a/frontend/admin/orders.html
+++ b/frontend/admin/orders.html
@@ -45,7 +45,7 @@
                     <thead>
                         <tr>
                             <th>Número</th>
-                            <th>Empleado</th>
+                            <th>vendedor</th>
                             <th>Cliente</th>
                             <th>Total</th>
                             <th>Estado</th>
