--- a/frontend/admin/subalmacenes.html
+++ b/frontend/admin/subalmacenes.html
@@ -245,7 +245,7 @@
             <ul class="nav-menu">
                 <li><a href="dashboard.html">Dashboard</a></li>
                 <li><a href="products.html">Productos</a></li>
-                <li><a href="employees.html">Empleados</a></li>
+                <li><a href="employees.html">Vendedores</a></li>
                 <li><a href="orders.html">Pedidos</a></li>
                 <li><a href="subalmacenes.html" class="active">Subalmacenes</a></li>
                 <li><a href="reports.html">Reportes</a></li>
@@ -308,9 +308,9 @@
             <div class="modal-body">
                 <form id="new-trip-form">
                     <div class="form-group">
-                        <label for="trip-employee">Empleado:</label>
+                        <label for="trip-employee">vendedor:</label>
                         <select id="trip-employee" required>
-                            <option value="">Seleccionar empleado...</option>
+                            <option value="">Seleccionar vendedor...</option>
                             <!-- Se llena dinámicamente -->
                         </select>
                     </div>
