--- a/frontend/admin/reports.html
+++ b/frontend/admin/reports.html
@@ -19,8 +19,8 @@
             <li><a href="products.html">Productos</a></li>
             <li><a href="employees.html">Empleados</a></li>
             <li><a href="orders.html">Pedidos</a></li>
-            <li><a href="subalmacenes.html" class="active">Subalmacenes</a></li>
-            <li><a href="reports.html">Reportes</a></li>
+            <li><a href="subalmacenes.html">Subalmacenes</a></li>
+            <li><a href="reports.html" class="active">Reportes</a></li>
             <li><a href="#" onclick="logout()">Cerrar Sesión</a></li>
         </ul>
         </nav>
