--- a/frontend/employee/dashboard.html
+++ b/frontend/employee/dashboard.html
@@ -17,7 +17,7 @@
             <ul class="nav-menu">
                 <li><a href="dashboard.html" class="active">Inicio</a></li>
                 <li><a href="orders.html">Crear Pedido</a></li>
-                <li><a href="sales.html">Mis Ventas</a></li>
+                <li><a href="sales.html">Pagos</a></li>
                 <li><a href="#" onclick="logout()">Cerrar Sesión</a></li>
             </ul>
         </nav>
