--- a/frontend/admin/products.html
+++ b/frontend/admin/products.html
@@ -248,8 +248,8 @@
         <main class="main-content">
             <header class="content-header">
                 <h1>Gestión de Productos</h1>
-                <button class="btn btn-primary" onclick="openProductModal()">
-                    ➕ Nuevo Producto
+                <button class="btn btn-primary" style="background-color: #052e5b;" onclick="openProductModal()">
+                    Nuevo Producto
                 </button>
             </header>
 
@@ -466,10 +466,10 @@
                         <td>
                             <div class="action-buttons">
                                 <button class="btn btn-sm btn-edit" onclick="editProduct(${product.id})">
-                                    ✏️ Editar
+                                    Edit
                                 </button>
                                 <button class="btn btn-sm btn-delete" onclick="deleteProductConfirm(${product.id})">
-                                    🗑️ Eliminar
+                                    Elim
                                 </button>
                             </div>
                         </td>
