--- a/frontend/employee/dashboard.html
+++ b/frontend/employee/dashboard.html
@@ -49,13 +49,10 @@
                 <h3>Acciones Rápidas</h3>
                 <div class="action-buttons">
                     <button class="btn-action" onclick="window.location.href='orders.html'">
-                        📝 Nuevo Pedido
+                        Nuevo Pedido
                     </button>
                     <button class="btn-action" onclick="window.location.href='sales.html'">
-                        📊 Ver Ventas
-                    </button>
-                    <button class="btn-action" onclick="viewProducts()">
-                        📦 Ver Productos
+                        Abonar a clientes
                     </button>
                 </div>
             </div>
