--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div class="login-container">
+    <div class="login-container" style="background-image: '/img/fondo.jpg';">
         <div class="login-box">
             <h1>Sistema de Aceites</h1>
             <form id="loginForm">
