--- a/frontend/admin/employees.html
+++ b/frontend/admin/employees.html
@@ -28,8 +28,8 @@
         <main class="main-content">
             <header class="content-header">
                 <h1>Gestión de Vendedores</h1>
-                <button class="btn btn-primary" onclick="openEmployeeModal()">
-                    ➕ Nuevo vendedor
+                <button class="btn btn-primary" style="background-color: #052e5b;" onclick="openEmployeeModal()">
+                    Nuevo vendedor
                 </button>
             </header>
 
